test site update speed

--- a/_posts/2024-06-08-Series.md
+++ b/_posts/2024-06-08-Series.md
@@ -1,9 +1,10 @@
 ---
 layout: page
-title: Séries
+title: Series
 subtitle: Critiques de séries
 comments: true
 tags: [series],
 ---
 ### *Frieren, beyond the journey's end, 2024* :     **todo**
 
+Test
