--- a/_posts/2024-06-08-Series.md
+++ b/_posts/2024-06-08-Series.md
@@ -3,7 +3,7 @@ layout: page
 title: Series
 subtitle: Critiques de séries
 comments: true
-tags: [series],
+tags: [series]
 ---
 ### *Frieren, beyond the journey's end, 2024* :     **todo**
 
